2002-10-16	Jakub Skopal	<j@kubs.cz>

 * implemented suspend feature, thanks go to Rodrigo Reyes for
   the idea
 * removed printf alarm for fragmented packets. Thanks to
   Ram for notification

2002-10-13	Jakub Skopal	<j@kubs.cz>

 * implemented bpf filters
 * implemented reading of ~/.jnettop configuration file
 * added example .jnettop file
 * the idea of filters came from Martynas Bieliauskas whom I owe
   many thanks

2002-08-03	Jakub Skopal	<j@kubs.cz>

 * main() now returns 0 when the program was legaly terminated
 * fixed build for systems which don't have gethostbyaddr_r()
 * changes in jnettop.c to use select() and avoid 100% processor time
   consumption on systems, which support it (Linux)

2002-08-31	Jakub Skopal	<j@kubs.cz>

 * modified configure.ac, so that it uses -Wall when compiling with GCC.
   Thanks again go to David B Harris aka ElectricElf
 * corrected too-wide terminal bug. Many thanks to David B Harris aka
   ElectricElf for patience during debugging
 * implemented bit/bytes per second switch (thanks to Martynas Bieliauskas
   for idea)

2002-08-29	Jakub Skopal	<j@kubs.cz>

 * implemented content filtering of HTTP and SMTP
 * added content filtering
 * removed dependency on inet_ntop
 * fixed Solaris 7 build

2002-08-28	Jakub Skopal	<j@kubs.cz>

 * fixed Solaris build
 * dropped dependency on uint64 in favour of broader portability
 * fixed FreeBSD build
 * fixed Debian build

2002-08-27	Jakub Skopal	<j@kubs.cz>

 * modified README so that it explains libpcap dependency
 * extracted classification routines from jnettop.c to jresolv.c
 * minor modifications to autoconf, so that it fails if no suitable glib2
   is found
 * implemented DLT_LINUX_SLL encapsulation, so listening on "any" interface
   under Linux now produces classified packets.
 * added "-i"/"--interface" parameter for user to choose which interface
   should be opened for listening
 * added "-d"/"--debug" parameter for DUMPing debug messages
 * added separate in/out accounting
